Attempt to fix issues with thumbnail slider images becoming too large

--- a/wp-content/themes/chrisdinh-photography/resources/styles/components/_slider.scss
+++ b/wp-content/themes/chrisdinh-photography/resources/styles/components/_slider.scss
@@ -2,8 +2,6 @@ body.gallery {
   #main-slider .splide__slide {
     display: flex;
     align-items: center;
-    flex-flow: column wrap;
-    justify-content: center;
   }
 
   #thumbnail-slider {
