--- a/wp-content/themes/chrisdinh-photography/resources/styles/modules/_global.scss
+++ b/wp-content/themes/chrisdinh-photography/resources/styles/modules/_global.scss
@@ -2,6 +2,10 @@ $main-breakpoint: '1120px';
 
 body {
   background-color: #000;
+
+  &.popup-active {
+    overflow-y: hidden;
+  }
 }
 
 h1 {
